tests/syntax-error/syntax-error-test.roc
app [main] { pf: platform "https://github.com/roc-lang/basic-cli/releases/download/0.15.0/SlwdbJ-3GR7uBWQo6zlmYWNYOxnvo8r6YABXD-45UOw.tar.br" }

import (

expect 2 + 2 == 5
expect "four" == "five"

main =
    Task.ok {}
